# adk-rag-agent

./: .gitignore  docker-compose.yml
adk_rag_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/: Dockerfile  cloudbuild.yaml  pyproject.toml  test_earthwork.txt  test_endpoints.py
backend/adk_rag_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/app/: main.py
backend/app/rag_agent/: agent.py  config.py
backend/app/rag_agent/agents/: upload_agent.py
backend/app/rag_agent/models/: document.py
backend/app/rag_agent/routers/: chat.py  files.py  query.py  upload_api.py
backend/app/rag_agent/tests/: test_add_data.py
backend/app/rag_agent/tools/: rag_query.py
frontend/: Dockerfile  cloudbuild.yaml  pyproject.toml
frontend/app/: main.py
